fixed parameter search space, better output of results, fixed analyze notebook

--- a/scripts/analyzeResults.ipynb
+++ b/scripts/analyzeResults.ipynb
@@ -25,8 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment = '2018-01-09-02-05-54'\n",
-    "result_count = 200\n",
+    "experiment = '2018-01-29-12-53-32'\n",
+    "result_count = 10\n",
     "\n",
     "client = pymongo.MongoClient('localhost', 1234)\n",
     "db = client[experiment]\n",
@@ -55,15 +55,17 @@
     "omega = list()\n",
     "theta = list()\n",
     "loss = list()\n",
+    "log_path = list()\n",
     "\n",
     "for job in cursor:\n",
-    "    x.append(job['misc']['vals']['x'])\n",
-    "    y.append(job['misc']['vals']['y'])\n",
-    "    v.append(job['misc']['vals']['v'])\n",
-    "    a.append(job['misc']['vals']['a'])\n",
-    "    omega.append(job['misc']['vals']['omega'])\n",
-    "    theta.append(job['misc']['vals']['theta'])\n",
-    "    loss.append(job['result']['loss'])"
+    "    x.append(job['result']['params']['x'])\n",
+    "    y.append(job['result']['params']['y'])\n",
+    "    v.append(job['result']['params']['v'])\n",
+    "    a.append(job['result']['params']['a'])\n",
+    "    omega.append(job['result']['params']['omega'])\n",
+    "    theta.append(job['result']['params']['theta'])\n",
+    "    loss.append(job['result']['loss'])\n",
+    "    log_path.append(job['result']['log_path'])"
    ]
   },
   {
@@ -84,7 +86,7 @@
     "plt.scatter(y, loss)\n",
     "plt.xlabel('variances pos_x=blue & pos_y=orange')\n",
     "plt.ylabel('loss')\n",
-    "plt.show() "
+    "plt.show()\n"
    ]
   },
   {
@@ -137,6 +139,28 @@
     "plt.xlabel('variances omega')\n",
     "plt.ylabel('loss')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loss only\n",
+    "plt.plot(loss)\n",
+    "plt.xlabel('trial')\n",
+    "plt.ylabel('loss')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(log_path)"
    ]
   },
   {
