updated jupyter notebook and python script

--- a/scripts/analyzeResults.ipynb
+++ b/scripts/analyzeResults.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import pymongo\n",
     "import pprint\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import yaml"
    ]
   },
   {
@@ -25,8 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment = '2018-01-29-12-53-32'\n",
-    "result_count = 10\n",
+    "experiment = '2018-03-12-09-51-13'\n",
+    "result_count = 5\n",
     "\n",
     "client = pymongo.MongoClient('localhost', 1234)\n",
     "db = client[experiment]\n",
@@ -81,12 +82,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# x and y\n",
+    "# x\n",
     "plt.scatter(x, loss)\n",
-    "plt.scatter(y, loss)\n",
-    "plt.xlabel('variances pos_x=blue & pos_y=orange')\n",
+    "plt.xlabel('variances pos_x')\n",
     "plt.ylabel('loss')\n",
-    "plt.show()\n"
+    "plt.axis([min(x), max(x), min(loss), max(loss)])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# y\n",
+    "plt.scatter(y, loss)\n",
+    "plt.xlabel('variances pos_y')\n",
+    "plt.ylabel('loss')\n",
+    "plt.axis([min(y), max(y), min(loss), max(loss)])\n",
+    "plt.show()"
    ]
   },
   {
@@ -99,6 +114,7 @@
     "plt.scatter(v, loss)\n",
     "plt.xlabel('variances v')\n",
     "plt.ylabel('loss')\n",
+    "plt.axis([min(v), max(v), min(loss), max(loss)])\n",
     "plt.show() "
    ]
   },
@@ -112,6 +128,7 @@
     "plt.scatter(a, loss)\n",
     "plt.xlabel('variances a')\n",
     "plt.ylabel('loss')\n",
+    "plt.axis([min(a), max(a), min(loss), max(loss)])\n",
     "plt.show() "
    ]
   },
@@ -125,6 +142,7 @@
     "plt.scatter(theta, loss)\n",
     "plt.xlabel('variances theta')\n",
     "plt.ylabel('loss')\n",
+    "plt.axis([min(theta), max(theta), min(loss), max(loss)])\n",
     "plt.show()"
    ]
   },
@@ -138,6 +156,7 @@
     "plt.scatter(omega, loss)\n",
     "plt.xlabel('variances omega')\n",
     "plt.ylabel('loss')\n",
+    "plt.axis([min(omega), max(omega), min(loss), max(loss)])\n",
     "plt.show()"
    ]
   },
@@ -162,6 +181,30 @@
    "source": [
     "print(log_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculate means\n",
+    "print(yaml.dump({'kalman_cov': { \n",
+    "                 'sys_var_a' : sum(a)/len(a),\n",
+    "                 'sys_var_v':  sum(v)/len(v),\n",
+    "                 'sys_var_x':  sum(x)/len(x),\n",
+    "                 'sys_var_y':  sum(y)/len(y),\n",
+    "                 'sys_var_theta': sum(theta)/len(theta),\n",
+    "                 'sys_var_omega': sum(omega)/len(omega) }},\n",
+    "                  default_flow_style=False)) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
